# corosio-nntp

./: .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
.github/workflows/: cmake.yml
cmake/: stop_token.cmake
doc/: Flow.md  Plan.md
libs/: CMakeLists.txt
libs/boost/: CMakeLists.txt
libs/fileio/: CMakeLists.txt  file_ops.cpp  file_stream.cpp  gcd_file_impl.cpp  gcd_file_ops.cpp  gcd_file_service.cpp  uring_file_impl.cpp  uring_file_ops.cpp  uring_file_service.cpp  win_file_impl.cpp  win_file_service.cpp
libs/fileio/include/fileio/detail/: file_ops.h  gcd_file_impl.h  uring_file_impl.h  win_file_impl.h  win_file_impl_internal.h  win_file_service.h
libs/fileio/include/fileio/test/: mock_file_stream.h
libs/fileio/test/: mock_file_stream.cpp
libs/nntp/: ArticleRange.cpp  CMakeLists.txt  Client.cpp  MessageId.cpp  Newsgroup.cpp  WildcardMatch.cpp  WildcardMatchPattern.cpp  client.cpp  file_ops.cpp  file_stream.cpp  gcd_file_impl.cpp  gcd_file_ops.cpp  gcd_file_service.cpp  uring_file_impl.cpp  uring_file_ops.cpp  uring_file_service.cpp  utf8.cpp  utf8.h  win_file_impl.cpp  win_file_service.cpp
libs/nntp/include/nntp/: Article.h  ArticleRange.h  ArticleSpec.h  Client.h  MessageId.h  Newsgroup.h  WildcardMatch.h  WildcardMatchPattern.h  client.h  file_stream.h
libs/nntp/include/nntp/detail/: gcd_file_impl.h  gcd_file_ops.h  gcd_file_service.h  uring_file_impl.h  uring_file_ops.h  uring_file_service.h  win_file_impl.h
libs/nntp/include/nntp/test/: mock_file_stream.h
libs/nntp/test/: mock_file_stream.cpp
tests/: CMakeLists.txt  file_stream_test.cpp  mock_file_stream_test.cpp
tests/fileio/: CMakeLists.txt  file_stream_test.cpp  mock_file_stream_test.cpp
tests/nntp/: ArticleRange_test.cpp  ArticleSpec_test.cpp  Article_test.cpp  CMakeLists.txt  Client_test.cpp  MessageId_test.cpp  Newsgroup_test.cpp  WildcardMatchPattern_test.cpp  WildcardMatch_test.cpp  nntp_test.cpp
tools/: CMakeLists.txt  reader.cpp
